// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConfigProvider componentConfig.List default 1`] = `
<div
  class="arco-list-wrapper"
>
  <div
    class="arco-list arco-list-default"
  >
    <div
      class="arco-list-content"
      role="list"
    >
      <div
        class="arco-empty"
      >
        <div
          class="arco-empty-wrapper"
        >
          <div
            class="arco-empty-image"
          >
            <svg
              aria-hidden="true"
              class="arco-icon arco-icon-empty"
              fill="none"
              focusable="false"
              stroke="currentColor"
              stroke-width="4"
              viewBox="0 0 48 48"
            >
              <path
                d="M24 5v6m7 1 4-4m-18 4-4-4m28.5 22H28s-1 3-4 3-4-3-4-3H6.5M40 41H8a2 2 0 0 1-2-2v-8.46a2 2 0 0 1 .272-1.007l6.15-10.54A2 2 0 0 1 14.148 18H33.85a2 2 0 0 1 1.728.992l6.149 10.541A2 2 0 0 1 42 30.541V39a2 2 0 0 1-2 2Z"
              />
            </svg>
          </div>
          <div
            class="arco-empty-description"
          >
            暂无数据
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ConfigProvider componentConfig.List set className globally 1`] = `
<div
  class="arco-list-wrapper"
>
  <div
    class="arco-list arco-list-default global-default-class"
  >
    <div
      class="arco-list-content"
      role="list"
    >
      <div
        class="arco-empty"
      >
        <div
          class="arco-empty-wrapper"
        >
          <div
            class="arco-empty-image"
          >
            <svg
              aria-hidden="true"
              class="arco-icon arco-icon-empty"
              fill="none"
              focusable="false"
              stroke="currentColor"
              stroke-width="4"
              viewBox="0 0 48 48"
            >
              <path
                d="M24 5v6m7 1 4-4m-18 4-4-4m28.5 22H28s-1 3-4 3-4-3-4-3H6.5M40 41H8a2 2 0 0 1-2-2v-8.46a2 2 0 0 1 .272-1.007l6.15-10.54A2 2 0 0 1 14.148 18H33.85a2 2 0 0 1 1.728.992l6.149 10.541A2 2 0 0 1 42 30.541V39a2 2 0 0 1-2 2Z"
              />
            </svg>
          </div>
          <div
            class="arco-empty-description"
          >
            暂无数据
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ConfigProvider componentConfig.List set className globally and component set className itself. 1`] = `
<div
  class="arco-list-wrapper"
>
  <div
    class="arco-list arco-list-default component-class"
  >
    <div
      class="arco-list-content"
      role="list"
    >
      <div
        class="arco-empty"
      >
        <div
          class="arco-empty-wrapper"
        >
          <div
            class="arco-empty-image"
          >
            <svg
              aria-hidden="true"
              class="arco-icon arco-icon-empty"
              fill="none"
              focusable="false"
              stroke="currentColor"
              stroke-width="4"
              viewBox="0 0 48 48"
            >
              <path
                d="M24 5v6m7 1 4-4m-18 4-4-4m28.5 22H28s-1 3-4 3-4-3-4-3H6.5M40 41H8a2 2 0 0 1-2-2v-8.46a2 2 0 0 1 .272-1.007l6.15-10.54A2 2 0 0 1 14.148 18H33.85a2 2 0 0 1 1.728.992l6.149 10.541A2 2 0 0 1 42 30.541V39a2 2 0 0 1-2 2Z"
              />
            </svg>
          </div>
          <div
            class="arco-empty-description"
          >
            暂无数据
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ConfigProvider componentConfig.List.Item default 1`] = `
<div
  class="arco-list-item"
  role="listitem"
>
  <div
    class="arco-list-item-main"
  />
</div>
`;

exports[`ConfigProvider componentConfig.List.Item set className globally 1`] = `
<div
  class="arco-list-item global-default-class"
  role="listitem"
>
  <div
    class="arco-list-item-main"
  />
</div>
`;

exports[`ConfigProvider componentConfig.List.Item set className globally and component set className itself. 1`] = `
<div
  class="arco-list-item component-class"
  role="listitem"
>
  <div
    class="arco-list-item-main"
  />
</div>
`;

exports[`List renders empty list 1`] = `
<div
  class="arco-list-wrapper"
>
  <div
    class="arco-list arco-list-default"
  >
    <div
      class="arco-list-content"
      role="list"
    >
      <div
        class="arco-empty"
      >
        <div
          class="arco-empty-wrapper"
        >
          <div
            class="arco-empty-image"
          >
            <svg
              aria-hidden="true"
              class="arco-icon arco-icon-empty"
              fill="none"
              focusable="false"
              stroke="currentColor"
              stroke-width="4"
              viewBox="0 0 48 48"
            >
              <path
                d="M24 5v6m7 1 4-4m-18 4-4-4m28.5 22H28s-1 3-4 3-4-3-4-3H6.5M40 41H8a2 2 0 0 1-2-2v-8.46a2 2 0 0 1 .272-1.007l6.15-10.54A2 2 0 0 1 14.148 18H33.85a2 2 0 0 1 1.728.992l6.149 10.541A2 2 0 0 1 42 30.541V39a2 2 0 0 1-2 2Z"
              />
            </svg>
          </div>
          <div
            class="arco-empty-description"
          >
            暂无数据
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
